--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,12 @@
 
 h1 {
     font-size: 40px;
+    text-transform: uppercase;
 }
 
 h2 {
     font-size: 28px;
+    text-decoration: underline;
 }
 
 .home h1 {
