Improve layout of recipe list in homepage
Add paddings to and remove margins from list elements, and justify
them to the left of the list container by adjusting its left padding.
Moreover, link text is no longer underlined

--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,19 @@ h2 {
 
 .home h1 {
     text-align: center;
-    /*border: 2px solid red;*/
     margin-bottom: 100px;
 }
 
-/*ul {
-    border: 2px solid blue;
-}*/
+.links {
+    padding-left: 20px;
+}
+
+.links > li{
+    width: 50%;
+    padding: 10px;
+    margin: none;
+}
+
+.links a {
+    text-decoration: none;
+}
