--- a/styles.css
+++ b/styles.css
@@ -13,21 +13,40 @@ h2 {
     text-decoration: underline;
 }
 
+/* HOME */
+
 .home h1 {
     text-align: center;
     margin-bottom: 100px;
 }
 
 .links {
-    padding-left: 20px;
+    padding-left: 0px;
 }
 
-.links > li{
-    width: 50%;
-    padding: 10px;
-    margin: none;
+.links > li {
+    width: 25%;
+    margin: 0px;
+    border: 2px solid black;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.links > #first {
+    border-top: 2px solid black;
+}
+
+.links > #last {
+    border-bottom: 2px solid black;
 }
 
 .links a {
     text-decoration: none;
+    display: block;
+    padding:10px;
+}
+
+.links a:hover {
+    background-color: silver;
+    color: purple;
 }
