Massive overhaul of homepage

--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,25 @@ h2 {
 
 /* HOME */
 
+body.home {
+    background-color: #f3c3b0;    
+}
+
 .home h1 {
     text-align: center;
+    padding: 10px;
+    margin-left: -10px;
+    margin-right: -10px;
     margin-bottom: 100px;
+    background-color: white;
+    color: #f3c3b0;
+}
+
+.home h2 {
+    color: white;
+    margin: 0 auto;
+    text-transform: uppercase;
+    text-decoration: none;
 }
 
 .links {
@@ -27,26 +43,28 @@ h2 {
 .links > li {
     width: 25%;
     margin: 0px;
-    border: 2px solid black;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-}
-
-.links > #first {
-    border-top: 2px solid black;
-}
-
-.links > #last {
-    border-bottom: 2px solid black;
+    border: 4px solid #f3c3b0;
+    border-left: 0px;
+    border-top: 2px solid #f3c3b0;
+    border-bottom: 2px solid #f3c3b0;
+    background-color: white;
 }
 
 .links a {
     text-decoration: none;
+    font-weight: bold;
     display: block;
     padding:10px;
+    color: #f3c3b0;
+}
+
+.links > li:hover {
+    border: 2px solid white;
+    margin-left: -5px;
+    width: 25.5%;
 }
 
 .links a:hover {
-    background-color: silver;
-    color: purple;
+    background-color: #f3c3b0;
+    color: white;
 }
